--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -172,6 +172,8 @@
     "@polkadot/util-crypto": "10.1.12",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "1.41.3",
+    "@stacks/network": "^4.3.5",
+    "@stacks/transactions": "^4.3.5",
     "@stricahq/bip32ed25519": "^1.0.3",
     "@stricahq/typhonjs": "^1.2.6",
     "@taquito/ledger-signer": "^13.0.1",
@@ -186,6 +188,7 @@
     "@xstate/react": "^1.6.3",
     "@zondax/cbor": "v8.1.0-zondax-no-bigint",
     "@zondax/ledger-filecoin": "^0.11.2",
+    "@zondax/ledger-stacks": "^1.0.2",
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
     "async": "^3.2.3",
@@ -205,6 +208,7 @@
     "bs58": "^4.0.1",
     "bs58check": "^2.1.2",
     "buffer": "^6.0.3",
+    "c32check": "^2.0.0",
     "cashaddrjs": "^0.4.4",
     "coininfo": "^5.1.0",
     "cosmjs-types": "0.2.1",
