--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -169,6 +169,7 @@
     "@walletconnect/client": "1.7.3",
     "@xstate/react": "^1.6.3",
     "@zondax/cbor": "v8.1.0-zondax-no-bigint",
+    "@zondax/ledger-casper": "^2.5.3",
     "@zondax/ledger-filecoin": "^0.11.2",
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
