--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -171,6 +171,7 @@
     "@zondax/cbor": "v8.1.0-zondax-no-bigint",
     "@zondax/ledger-casper": "^2.5.3",
     "@zondax/ledger-filecoin": "^0.11.2",
+    "blake2": "^4.1.1",
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
     "async": "^3.2.3",
@@ -252,6 +253,7 @@
     "@types/bs58": "^4.0.1",
     "@types/cbor": "^6.0.0",
     "@types/jest": "^27.5.0",
+    "@types/blake2": "^4.0.1",
     "@types/lodash": "^4.14.179",
     "@types/node": "16.11.12",
     "@types/object-hash": "^2.1.0",
