--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -108,6 +108,15 @@
   "react-native": {
     "https": false
   },
+  "pnpm": {
+    "packageExtensions": {
+      "@zilliqa-js/account": {
+        "dependencies": {
+          "hash.js": "^1.1.7"
+        }
+      }
+    }
+  },
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "^5.1.0",
     "@celo/connect": "^3.0.1",
@@ -147,7 +156,7 @@
     "@ledgerhq/hw-app-tezos": "workspace:^",
     "@ledgerhq/hw-app-trx": "workspace:^",
     "@ledgerhq/hw-app-xrp": "workspace:^",
-    "@ledgerhq/hw-app-zilliqa": "workspace:^",    
+    "@ledgerhq/hw-app-zilliqa": "workspace:^",
     "@ledgerhq/hw-transport": "workspace:^",
     "@ledgerhq/hw-transport-mocker": "workspace:^",
     "@ledgerhq/hw-transport-node-speculos": "workspace:^",
@@ -169,6 +178,15 @@
     "@types/redux-actions": "^2.6.2",
     "@walletconnect/client": "1.7.3",
     "@xstate/react": "^1.6.3",
+    "@zilliqa-js/account": "^3.3.4",
+    "@zilliqa-js/blockchain": "^3.3.4",
+    "@zilliqa-js/contract": "^3.3.4",
+    "@zilliqa-js/core": "^3.3.4",
+    "@zilliqa-js/crypto": "^3.3.4",
+    "@zilliqa-js/proto": "^3.3.4",
+    "@zilliqa-js/subscriptions": "^3.3.4",
+    "@zilliqa-js/util": "^3.3.4",
+    "@zilliqa-js/zilliqa": "^3.3.4",
     "@zondax/cbor": "v8.1.0-zondax-no-bigint",
     "@zondax/ledger-filecoin": "^0.11.2",
     "algo-msgpack-with-bigint": "^2.1.1",
