--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -170,6 +170,7 @@
     "@xstate/react": "^1.6.3",
     "@zondax/cbor": "v8.1.0-zondax-no-bigint",
     "@zondax/ledger-filecoin": "^0.11.2",
+    "@zondax/ledger-icp": "^0.6.1",
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
     "async": "^3.2.3",
