--- a/package.json
+++ b/package.json
@@ -130,6 +130,13 @@
       "rn-fetch-blob@0.12.0": "patches/rn-fetch-blob@0.12.0.patch",
       "react-native-os@1.2.6": "patches/react-native-os@1.2.6.patch",
       "react-native-tcp@4.0.0": "patches/react-native-tcp@4.0.0.patch"
+    },
+    "packageExtensions": {
+      "@zilliqa-js/account": {
+        "dependencies": {
+          "hash.js": "^1.1.7"
+        }
+      }
     }
   },
   "dependencies": {
