--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -62,14 +62,14 @@ jobs:
     env:
       NODE_OPTIONS: "--max-old-space-size=7168"
     steps:
-      - name: job id
+      - name: Job id
         run: |
           echo "${{ github.job }}"
           echo "${{ github.run_id }}"
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.sha || github.event.inputs.ref || github.event.push.head.sha }}
-      - name: set git user
+      - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
           git config user.name "Team Live"
@@ -92,9 +92,9 @@ jobs:
         id: build-desktop
         with:
           os: linux
-      - name: build the app
+      - name: Build the app
         run: pnpm build:lld --api="http://127.0.0.1:${{ steps.turborepo-cache-server.outputs.port }}" --token="yolo" --team="foo"
-      - name: upload linux app
+      - name: Upload linux app
         uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.build-desktop.outputs.version }}-linux-x86_64.AppImage
@@ -106,20 +106,20 @@ jobs:
     env:
       NODE_OPTIONS: "--max-old-space-size=7168"
     steps:
-      - name: job id
+      - name: Job id
         run: |
           echo "${{ github.job }}"
           echo "${{ github.run_id }}"
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.sha || github.event.inputs.ref  || github.event.push.head.sha }}
-      - name: update path
+      - name: Update path
         run: |
           echo "C:\Program Files\Git\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 2.1.816
-      - name: set git user
+      - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
           git config user.name "Team Live"
@@ -137,11 +137,11 @@ jobs:
         id: build-desktop
         with:
           os: win
-      - name: build the app
+      - name: Build the app
         run: |
           pnpm build:lld --api="http://127.0.0.1:${{ steps.turborepo-cache-server.outputs.port }}" --token="yolo" --team="foo"
         shell: bash
-      - name: upload windows
+      - name: Upload windows
         uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.build-desktop.outputs.version }}-win-x64.exe
@@ -153,7 +153,7 @@ jobs:
     env:
       NODE_OPTIONS: "--max-old-space-size=7168"
     steps:
-      - name: job id
+      - name: Job id
         run: |
           echo "${{ github.job }}"
           echo "${{ github.run_id }}"
@@ -161,7 +161,7 @@ jobs:
         with:
           ref: ${{ github.event.inputs.sha || github.event.inputs.ref  || github.event.push.head.sha }}
           persist-credentials: false
-      - name: set git user
+      - name: Set git user
         run: |
           git config user.email "team-live@ledger.fr"
           git config user.name "Team Live"
@@ -184,10 +184,10 @@ jobs:
         id: build-desktop
         with:
           os: mac
-      - name: build the app
+      - name: Build the app
         run: |
           pnpm build:lld --api="http://127.0.0.1:${{ steps.turborepo-cache-server.outputs.port }}" --token="yolo" --team="foo"
-      - name: upload macOS app
+      - name: Upload macOS app
         uses: actions/upload-artifact@v3
         with:
           name: ${{ steps.build-desktop.outputs.version }}-mac.dmg
@@ -203,14 +203,8 @@ jobs:
     runs-on: ubuntu-latest
     if: always() && !cancelled() && github.event_name == 'workflow_dispatch' && github.event.inputs.sha != ''
     steps:
-      - name: generate token
-        id: generate-token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.GH_BOT_APP_ID }}
-          private_key: ${{ secrets.GH_BOT_PRIVATE_KEY }}
       - uses: actions/github-script@v6
-        name: get statuses of runs
+        name: Get statuses of runs
         id: status
         with:
           script: |
@@ -287,41 +281,7 @@ jobs:
             }
             fs.writeFileSync("summary.json", JSON.stringify(data), "utf-8");
       - uses: actions/upload-artifact@v3
-        name: upload output
+        name: Upload output
         with:
           path: ${{ github.workspace }}/summary.json
           name: summary.json
-      # - uses: actions/github-script@v6
-      #   with:
-      #     github-token: ${{ steps.generate-token.outputs.token }}
-      #     script: |
-      #       const status = ${{ steps.status.outputs.result }};
-      #       const title = status.isFailed ? "🔴 Failed" : status.isCancelled ? "♾ Cancelled" : "💚 Success";
-      #       const actions = status.isFailed ? [{
-      #         label: "Rerun job",
-      #         identifier: "rerun_job",
-      #         description: "relaunch failed jobs"
-      #       }] : [];
-      #       const previous = await github.rest.checks.update({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         head_sha: "${{ github.event.inputs.sha }}",
-      #         check_run_id: "${{ github.event.inputs.check_run_id }}",
-      #       });
-      #       await github.rest.checks.update({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         name: previous.data.name,
-      #         details_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${{ github.run_id }}`,
-      #         head_sha: "${{ github.event.inputs.sha }}",
-      #         check_run_id: "${{ github.event.inputs.check_run_id }}",
-      #         completed_at: new Date().toISOString(),
-      #         conclusion: status.isFailed ? 'failure' : status.isCancelled ? 'cancelled' : 'success',
-      #         output: {
-      #           title,
-      #           summary: `${status.summary}
-      #       ---
-      #       [⚙️ Summary](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${{ github.run_id }})`
-      #         },
-      #         actions
-      #       });
