feat(icp): add transfer support for icp on cli

--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -124,6 +124,11 @@
     "@crypto-com/chain-jslib": "0.0.19",
     "@elrondnetwork/erdjs": "11.0.0",
     "@elrondnetwork/erdjs-network-providers": "^1.1.2",
+    "@dfinity/agent": "^0.15.1",
+    "@dfinity/candid": "^0.15.0",
+    "@dfinity/nns": "0.11.0-next-2022-12-28",
+    "@dfinity/principal": "^0.15.0",
+    "@dfinity/utils": "^0.0.6",
     "@ethereumjs/common": "^2.6.2",
     "@ethereumjs/tx": "^3.5.0",
     "@ethersproject/shims": "^5.7.0",
@@ -230,6 +235,7 @@
     "secp256k1": "^4.0.3",
     "semver": "^7.3.5",
     "sha.js": "^2.4.11",
+    "simple-cbor": "^0.4.1",
     "source-map-support": "^0.5.21",
     "stellar-sdk": "^10.1.1",
     "superstruct": "0.14.2",
