refac(icp): rename dfinity to internet_computer

--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -198,6 +198,7 @@
     "cashaddrjs": "^0.4.4",
     "coininfo": "^5.1.0",
     "cosmjs-types": "0.2.1",
+    "crc": "^4.2.0",
     "create-hmac": "^1.1.7",
     "crypto-js": "^4.1.1",
     "eip55": "^2.1.0",
