--- a/tools/actions/composites/build-desktop/action.yml
+++ b/tools/actions/composites/build-desktop/action.yml
@@ -35,13 +35,19 @@ runs:
       uses: ledgerhq/ledger-live/tools/actions/change-product-name@develop
       with:
         path: ${{ github.workspace }}/apps/ledger-live-desktop
-    - name: make local version pr
+    - name: make local version (workflow dispatch)
+      if: github.event_name == 'workflow_dispatch'
+      env:
+        VERSION: ${{ steps.version.outputs.clean }}-sha.${{ github.sha }}
+      run: cd apps/ledger-live-desktop && npm version $VERSION
+      shell: bash
+    - name: make local version (pr)
       if: github.event_name == 'pull_request'
       env:
         VERSION: ${{ steps.version.outputs.clean }}-sha.${{ github.event.pull_request.head.sha }}
       run: cd apps/ledger-live-desktop && npm version $VERSION
       shell: bash
-    - name: make local version push
+    - name: make local version (push)
       if: github.event_name == 'push'
       env:
         VERSION: ${{ steps.version.outputs.clean }}-sha.${{ github.sha }}
